changed item bag colour

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="outline w-2/3 h-56 mt-10 bg-gray-700">
             <p class="pl-1.5 pt-1"><b><u>You</u></b></p><br>
             <p class="pl-1.5"><b>Items in Bag:</b></p>
-            <p class="pl-1.5 text-indigo-900" id="items"></p><br>
+            <p class="pl-1.5 text-red-500" id="items"></p><br>
             <p class="pl-1.5"><b>Current Location:</b></p>
             <p class="pl-1.5 text-red-500" id="location">kitchen</p>
             <p class="pl-1.5"><b>Commands:</b></p>
